# pronax-ai

./: .env.example  ATTRIBUTION.md  Cargo.toml  Dockerfile  README.md  build_errors.txt  docker-compose.yml  index.html  nginx.conf
.github/workflows/: deploy.yml
ml/: pronax_ml_device_mgr.rs
src/: lib.rs  main.rs
src/cli/: envision.rs  forge.rs  ignite.rs  mod.rs  synthesize.rs
web/: index.html  package.json  server.py  simple_server.py  start_server.bat  tailwind.config.js
web/src/: input.css
